# getaircrafts

./: CMakeLists.txt  Installer.cpp  Installer.h  README.md  getaircrafts.pro  getaircrafts.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  webservice.cpp  webservice.h  xml2html.cpp  xml2html.h  yaai.pro  yainstall.pro  yapmanager.pro  yapmanager.qrc
cmake/: FindLibZip.cmake
css/: style.css
js/: functions.js
